                 Known problems 

  o Very occassionally (about 1 in 1000 in monte carlo experiments) the
     algorithm gets stuck and does not improve (so does not converge). The
     workaround is to restart with a very slightly perturbed starting point.       


            Changes in GPArotation version 200x.x-x

  o changed rotation method functions to return all elements of GPFoblq and
    GFForth.

  o fixed the documentation file primary alias for all rotations (which was 
     being called oblimin).
      

            Changes in GPArotation version 2006.2-2

  o extra argument (...) to invisible in print.GPArotation was removed.
  
            Changes in GPArotation version 2006.2-1

  o broken references in documentation were fixed and updated.


            Changes in GPArotation version 2005.10-1

  o warning message about non-convergence expanded to indicate function.  
  

                  GPArotation version 2005.4-1

  o  First released version.